// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<li
  class="DropdownListItem"
  data-test-id="cf-ui-dropdown-list-item"
  role="menuitem"
>
  <span>
    DropdownMenuItem
  </span>
</li>
`;

exports[`renders the component as active 1`] = `
<li
  class="DropdownListItem DropdownListItem--active"
  data-test-id="cf-ui-dropdown-list-item"
  role="menuitem"
>
  <span>
    entry
  </span>
</li>
`;

exports[`renders the component as disabled 1`] = `
<li
  class="DropdownListItem DropdownListItem--disabled"
  data-test-id="cf-ui-dropdown-list-item"
  role="menuitem"
>
  <span>
    entry
  </span>
</li>
`;

exports[`renders the component with a href 1`] = `
<li
  class="DropdownListItem DropdownListItem__submenu-toggle"
  data-test-id="cf-ui-dropdown-list-item"
  role="menuitem"
>
  <a
    class="DropdownListItem__button"
    data-test-id="cf-ui-dropdown-list-item-button"
    href="#"
    type="button"
  >
    <span
      class="TabFocusTrap DropdownListItem__button__inner-wrapper"
      tabindex="-1"
    >
      DropdownListItem with a href
    </span>
  </a>
</li>
`;

exports[`renders the component with an additional class name 1`] = `
<li
  class="DropdownListItem my-extra-class"
  data-test-id="cf-ui-dropdown-list-item"
  role="menuitem"
>
  <span
    class="my-extra-class"
  >
    Entry
  </span>
</li>
`;
